RAID-62: Replace plurals with singular items eg titles, descriptions, contributors become title, description contributor etc. Rename id nto identifier. Move servicePoint to from identifier to identifier.owner. Support dates with year only, year and month or year month and day